demo-yew/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-yew
  labels:
    app: demo-yew
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: demo-yew
